backend-node/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-node
  template:
    metadata:
      labels:
        app: backend-node
    spec:
      containers:
        - name: backend-node
          image: vendor-onboarding-backend-node:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
