backend-node/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-node
spec:
  selector:
    app: backend-node
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
